--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -869,6 +869,8 @@ JCommander jc = JCommander.newBuilder()
 
 For the most common cases, there is no need to actually implement `IDefaultProvider`, as JCommander contains the classes `PropertyFileDefaultProvider` and `EnvironmentVariableDefaultProvider` for reading defaults from a property file (`jcommander.properties` by default) or from an environment variable (`JCOMMANDER_OPTS` by default).
 
+A *sequence* of multiple default providers can be used with `IDefaultProvider.sequenceOf(...)`, in which case the providers are queried in sequence, and the first non-null default value is applied.
+
 
 == Help parameter
 
